--- a/mystyle.css
+++ b/mystyle.css
@@ -35,6 +35,11 @@ table, th, td {
 
 
 }
+/* Set the size of the div element that contains the map */
+#map {
+  height: 400px;  /* The height is 400 pixels */
+  width: 100%;  /* The width is the width of the web page */
+ }
 
 ol.c {
     list-style-type: upper-alpha;
