--- a/mystyle.css
+++ b/mystyle.css
@@ -35,11 +35,6 @@ table, th, td {
 
 
 }
-/* Set the size of the div element that contains the map */
-#map {
-  height: 400px;  /* The height is 400 pixels */
-  width: 100%;  /* The width is the width of the web page */
- }
 
 ol.c {
     list-style-type: upper-alpha;
@@ -63,3 +58,6 @@ a:hover {
 a:active {
     color: blue;
 }	
+#map {
+  height: 100%;
+}
